--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,6 @@
 # ____Please Don't Ever Reveal Your Bot Token In Github Just Use Your Token At Runtime As Environment Variable____
 
-DATABASE_URL=
-BOT_TOKEN=
-OWNER_ID=
-PREFIX=
+DATABASE_URL=mongodb+srv://thelastcroneb:Tcroneb/2025@jinwoo.zvygv0t.mongodb.net/?retryWrites=true&w=majority&appName=jinwoo
+BOT_TOKEN=7827301147:AAGOSpd2qTtGvMWTTSCNoJtP0AfkkjYCh68
+OWNER_ID=7080079152
+PREFIX=.
