--- a/sample.env
+++ b/sample.env
@@ -3,4 +3,4 @@
 DATABASE_URL=mongodb+srv://thelastcroneb:Tcroneb/2025@jinwoo.zvygv0t.mongodb.net/?retryWrites=true&w=majority&appName=jinwoo
 BOT_TOKEN=7827301147:AAGOSpd2qTtGvMWTTSCNoJtP0AfkkjYCh68
 OWNER_ID=7080079152
-PREFIX=.
+PREFIX=
